# llm_storytell

./: .gitignore  COMPLETED_TASKS.md  CONTRIBUTING.md  CURSOR_WORKFLOW.md  README.md  SPEC.md  TASKS.md  pyproject.toml  test_escape.py  test_template_fix.py
.cursor/commands/: approve-plan.md  start-work-next-task.md
.cursor/rules/: 00-workflow.md  01-read-the-docs.md  02-cli-and-venv.md  02-use-cmd.md  03-use-venv.md
apps/: default_config.yaml
apps/example_app/: app_config.yaml
docs/: telegram-delivery.md
docs/decisions/: 0001-tech-stack.md
prompts/: README.md
prompts/app-defaults/: 10_outline.md  20_section.md  30_critic.md
prompts/coding/: dev_workflow_prompt.md  release_prep_tasks_prompts.md
prompts/shared/: dev_workflow_prompt.md  release_prep_tasks_prompts.md
scripts/: audio_tweak.py
src/: main.py
src/llm-storytell/: cli.py  continuity.py  logging.py  run_dir.py
src/llm_storytell/: __main__.py  cli.py  iso639.py  (+3 more)
tests/: test_app_config.py  test_app_resolution.py  test_audio_prep_step.py  test_cli.py  test_cli_word_count.py  test_config_loading.py  test_context_loader.py  test_critic_step.py  test_deliverable_to_book.py  test_e2e.py  test_elevenlabs_tts.py  test_iso639.py  test_llm_pricing.py  test_llm_provider.py  test_llm_tts_step.py  test_logging.py  test_openai_tts.py  test_outline_step.py  test_pipeline_loader.py  test_pipeline_providers.py  test_pipeline_resolve.py  test_pipeline_state.py  test_prompt_render.py  test_prompt_variable_contracts.py  test_run_init.py  test_section_loop.py  test_telegram_delivery.py  test_template_fix.py
(+47 files in other folders)
