[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_storytell"
version = "1.2.0"
description = "A series of pipelines that creates mini-audiobooks, based on stories set in a predefined universe."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=1.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.14",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/llm_storytell"]

[tool.pytest.ini_options]
# Add project root to sys.path so steps' "from src.llm_storytell..." resolve when running pytest.
pythonpath = ["."]
